# kpgb

./: .env  .env.example  .gitignore  ACCESS_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  CONFIG_GUIDE.md  CONTENT_FLOW.md  Cargo.toml  DEPLOYMENT.md  FUTURE_ROADMAP.md  GITHUB_ACTIONS_SETUP.md  PROJECT_STATUS.md  PUSH_GUIDE.md  QUICK_START.md  README.md  THEMES.md  URL_COMPATIBILITY.md  change-theme.sh  check-storage.sh  cleanup-test-posts.sh  delete-test-posts.sh  deploy-github-pages-ssh.sh  deploy-github-pages.sh  deploy-to-ipfs.sh  final-cleanup.sh  kpgb.db  manage-posts.sh  preview.sh  publish-tech-only.sh  quick-deploy.sh  serve.sh  serve_local.sh  setup-github-auth.md  site.dev.toml  site.local.toml  site.prod.toml  site.production.toml  site.toml  static-site-demo.md  (+8 more)
.github/workflows/: build-and-test.yml  deploy.yml
content/: test-image-optimization.md
content/posts/: auto-excerpt-test.md  how-to-build-an-agent.md  nautilus-docs-overview.md  nautilus-trader-core-concepts.md  nautilus-trader-docs-index.md  nautilus-trader-installation-guide.md  nautilus-trader-quickstart-complete.md  nautilus-trader-strategy-development.md  pagination-test-1.md  pagination-test-2.md  pagination-test-3.md  tag-system-demo.md
docs/: content-flow-diagram.md  giscus-setup-guide.md  setup-giscus.md
migrations/: 001_create_posts.sql
public/: archive.html  docs.html  feed.xml  index.html  minimal.html  robots.txt  search-index.json  site.webmanifest  sitemap.xml  test.html
public/archive/: index.html
public/css/: style.css
public/docs/: index.html
public/js/: search.js
public/posts/: T.html  ibc.html  (+50 more)
scripts/: deploy.sh
src/: constants.rs  frontmatter.rs  main.rs
templates/: archive.html  base.html  docs.html  docs_category.html  docs_detail.html  docs_index.html  index.html  post.html  search.html  style.css  tag_posts.html  tags.html  widget.js
(+59 files in other folders)
