[package]
name = "kpgb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono", "uuid"] }

# Storage
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Crypto
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Template engine
tera = "1.20"
pulldown-cmark = "0.12"

# Utils
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
toml = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
rss = "2.0"
rand = "0.8"
regex = "1.10"
